--- a/app/views/widgets/_nav.html.haml
+++ b/app/views/widgets/_nav.html.haml
@@ -3,15 +3,15 @@
 %nav{:id => "proposition-menu"}
   %ul{:id => "proposition-links"}
     %li
-      = link_to "News and views", "#{ENV['HOME_PAGE_URL']}/news/"
+      = link_to "News and views", "#{ENV['HOME_PAGE_URL']}news/"
     %li
-      = link_to "Working at DIT", "#{ENV['HOME_PAGE_URL']}/working-at-dit/"
+      = link_to "Working at DIT", "#{ENV['HOME_PAGE_URL']}working-at-dit/"
     %li
-      = link_to "About Us", "#{ENV['HOME_PAGE_URL']}/about-dit/"
+      = link_to "About Us", "#{ENV['HOME_PAGE_URL']}about-dit/"
     %li
-      = link_to "Tools", "#{ENV['HOME_PAGE_URL']}/tools/"
+      = link_to "Tools", "#{ENV['HOME_PAGE_URL']}tools/"
     %li
-      = link_to "Data Hub", "#{ENV['HOME_PAGE_URL']}/data-hub/"
+      = link_to "Data Hub", "#{ENV['HOME_PAGE_URL']}data-hub/"
     - if super_admin?
       %li
         = link_to 'Manage', admin_home_path, class: "manage-link"
