update colours for 'warning'-level flash message

--- a/app/assets/stylesheets/digital-workspace-overrides/components/_flash-messages.scss
+++ b/app/assets/stylesheets/digital-workspace-overrides/components/_flash-messages.scss
@@ -5,6 +5,10 @@
 	.notice {
 		background-color: $brand_color_c;
 	}
+	.warning {
+		background-color: $brand_color_a;
+		color: #fff;
+	}
 }
 
 .error-summary {
