updated news link in nav - was pointing to wrong url

--- a/app/views/widgets/_nav.html.haml
+++ b/app/views/widgets/_nav.html.haml
@@ -3,7 +3,7 @@
 %nav{:id => "proposition-menu"}
   %ul{:id => "proposition-links"}
     %li
-      = link_to "News and views", "#{ENV['HOME_PAGE_URL']}news/"
+      = link_to "News and views", "#{ENV['HOME_PAGE_URL']}news-and-views/"
     %li
       = link_to "Working at DIT", "#{ENV['HOME_PAGE_URL']}working-at-dit/"
     %li
