push up the z-index on the search button so it appears over the margin on input

--- a/app/assets/stylesheets/digital-workspace-overrides/components/_people-search-bar.scss
+++ b/app/assets/stylesheets/digital-workspace-overrides/components/_people-search-bar.scss
@@ -6,6 +6,10 @@
 				width: 95%;
 				.mod-search-submit {
 					//background-position: -16px 50%;
+					z-index: 20;
+					&:hover {
+						background-color: $brand_color_c;
+					}
 				}
 				label {
 					font-size: 16px;
