--- a/app/views/people/_action_links.haml
+++ b/app/views/people/_action_links.haml
@@ -1,10 +1,11 @@
 - if @person.persisted?
   - if can_edit_profiles?
-    = link_to info_text('delete_this_profile'),
-      @person,
-      method: :delete,
-      class: "button button-secondary",
-      data: { confirm: "Are you sure you want to delete #{ @person }? #{ info_text('profile_deletable') }." }
+    - if policy(@person).destroy?
+      = link_to info_text('delete_this_profile'),
+        @person,
+        method: :delete,
+        class: "button button-secondary",
+        data: { confirm: "Are you sure you want to delete #{ @person }? #{ info_text('profile_deletable') }." }
     = edit_person_link 'Edit this profile', @person, class: 'button'
   - elsif @person == current_user
     = edit_person_link 'Edit my profile', current_user, class: 'button'
