Update email text

--- a/app/views/user_update_mailer/deleted_profile_email.html.haml
+++ b/app/views/user_update_mailer/deleted_profile_email.html.haml
@@ -4,7 +4,7 @@
 %tr
   %td{ align:"left", valign: "top", style: "line-height: 30px;", width: "560" }
     %p
-      The People Finder profile linked to this email address has been deleted
+      The People Finder profile linked to your email address has been deleted
       - if @by_email.present?
         by #{ mail_to @by_email }.
     %p
