--- a/app/views/group_update_mailer/inform_subscriber.html.haml
+++ b/app/views/group_update_mailer/inform_subscriber.html.haml
@@ -3,9 +3,9 @@
     Hello #{@person.given_name},
 %tr
   %td{ align:"left", valign: "top", style: "line-height: 30px; padding-bottom:20px;", width: "560" }
-    The #{@group} page on People Finder has been edited by #{ mail_to @instigator.email }.
+    The #{@group} page on People Finder has been edited and republished by #{ mail_to @instigator.email }.
     %p
-      Check the team's profile:
+      View the updated details:
     = browser_warning
     = easy_copy_link_to url: @group_url
     = app_guidance
