--- a/app/views/groups/_teams_in_team.html.haml
+++ b/app/views/groups/_teams_in_team.html.haml
@@ -9,8 +9,9 @@
 
       %span.pull-right
         - if @people_outside_subteams_count > 0
-          = link_to "View #{ pluralize_with_delimiter @people_outside_subteams_count, 'person' } not assigned to a sub-team", people_outside_subteams_group_path(@group), class: 'font-xsmall pipe-right'
-        = link_to 'Add new sub-team', new_group_group_path(@group), class: 'font-xsmall'
+          = link_to "View #{ pluralize_with_delimiter @people_outside_subteams_count, 'person' } not assigned to a sub-team", people_outside_subteams_group_path(@group), class: 'font-xsmall'
+        - if policy(Group).create?
+          = link_to 'Add new sub-team', new_group_group_path(@group), class: 'font-xsmall pipe-left'
 
 #teams.grid-row.mod-subgroups
   = render partial: "subgroup", collection: @group.children
