--- a/app/views/people/_form.html.haml
+++ b/app/views/people/_form.html.haml
@@ -92,7 +92,14 @@
           .form-group
             = b.label(class: "block-label selection-button-checkbox", 'data-value': b.value) { b.check_box + b.text }
 
- 
+  .form-group#professions
+    %label.form-label{for: :professions} Professions I belong to (optional)
+    %ul.inline-list
+      = f.collection_check_boxes :professions, profession_names, :first, :last, checked: @person.try(:professions) do |b|
+        %li
+          .form-group
+            = b.label(class: "block-label selection-button-checkbox", 'data-value': b.value) { b.check_box + b.text }
+
   .form-group#additional_responsibilities
     %label.form-label{for: :additional_responsibilities} My additional roles and responsibilities (optional)
     %ul.inline-list
