--- a/app/views/people/_form.html.haml
+++ b/app/views/people/_form.html.haml
@@ -69,6 +69,7 @@
         %li
           .form-group
             = b.label(class: "block-label selection-button-checkbox", 'data-value': b.value) { b.check_box + b.text }
+  = f.text_field :other_key_skills
 
   = f.text_field :language_fluent
   = f.text_field :language_intermediate
