--- a/app/views/shared/_zendesk_footer.html.haml
+++ b/app/views/shared/_zendesk_footer.html.haml
@@ -8,6 +8,10 @@
     .form-group
       = label_tag('problem_report_problem', 'What went wrong?', {:class => 'form-label'})
       = text_area_tag('problem_report_problem', '', {:class => 'form-control', :id => 'problem_report_problem'})
+    - unless logged_in_regular?
+      .form-group
+        = label_tag('problem_report_email', 'Your email', {:class => 'form-label'})
+        = text_field_tag('problem_report_email', :person_email)
     = hidden_field_tag('problem_report_origin', "#{request.original_url}")
     = hidden_field_tag('problem_report_browser', "#{request.env['HTTP_USER_AGENT']}")
     = submit_tag('Report', class: 'button')
