Add ‘Other’ profile form fields

--- a/app/views/people/_form.html.haml
+++ b/app/views/people/_form.html.haml
@@ -84,6 +84,7 @@
         %li
           .form-group
             = b.label(class: "block-label selection-button-checkbox", 'data-value': b.value) { b.check_box + b.text }
+  = f.text_field :other_learning_and_development
 
   .form-group#networks
     %label.form-label{for: :networks} Networks I belong to (optional)
@@ -108,6 +109,8 @@
         %li
           .form-group
             = b.label(class: "block-label selection-button-checkbox", 'data-value': b.value) { b.check_box + b.text }
+            
+  = f.text_field :other_additional_responsibilities
 
   .form-group.mod-media.card
     = f.label :profile_image, 'Profile photo', class: 'form-label'
