link updates in header (mobile search button), beta bar (survey) and footer (DIT Digital Team)

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -16,4 +16,4 @@
       %li
         = link_to("UKEF", "https://info.ecgd.gov.uk/pages/home.aspx")
     %p
-      = "Built by the #{link_to('DIT Digital', '#')} team".html_safe
+      = "Built by the #{link_to('DIT Digital', 'https://people.trade.gov.uk/teams/digital-technology-and-estates')} team".html_safe
