--- a/app/views/layouts/peoplefinder.html.haml
+++ b/app/views/layouts/peoplefinder.html.haml
@@ -41,7 +41,7 @@
     %li
       = link_to "Account", '/', class: "mobile-account-button"
     %li
-      = link_to "Search", "/search", class: "mobile-search-button"
+      = link_to "Search", "#{ENV['HOME_PAGE_URL']}/search", class: "mobile-search-button"
   .header-proposition
     .content
       = link_to "Digital Workspace", home_path, id: "proposition-name"
