--- a/app/views/widgets/_beta_bar.html.haml
+++ b/app/views/widgets/_beta_bar.html.haml
@@ -1,4 +1,4 @@
 .beta-bar
   %span{:class => 'beta-label'}
     Beta
-  Complete our quick 2-minute survey to #{link_to('help us improve the Digital Workspace', 'http://www.smartsurvey.co.uk/s/2DJNQ/', :target => 'blank')}
+  Complete our quick 2-minute survey to #{link_to('help us improve the Digital Workspace', 'https://www.smartsurvey.co.uk/s/digitalworkspace/', :target => 'blank')}
