also updated the account icon link on mobile, and a styling bug with the menu

--- a/app/assets/stylesheets/digital-workspace-overrides/components/_global-header.scss
+++ b/app/assets/stylesheets/digital-workspace-overrides/components/_global-header.scss
@@ -29,6 +29,7 @@
 				padding-left: 7px;
 			}
 			#proposition-links {
+				float: none;
 				padding-top: 10px;
 				padding-left: 8px;
 				width: auto;
