--- a/app/views/layouts/peoplefinder.html.haml
+++ b/app/views/layouts/peoplefinder.html.haml
@@ -38,8 +38,9 @@
 
 - content_for :proposition_header do
   %ul.mobile-header
-    %li
-      = link_to "Account", '/', class: "mobile-account-button"
+    - if logged_in_regular?
+      %li
+        = link_to "Account", "#{person_path(current_user)}", class: "mobile-account-button"
     %li
       = link_to "Search", "#{ENV['HOME_PAGE_URL']}/search", class: "mobile-search-button"
   .header-proposition
