--- a/app/views/shared/_loginout.html.haml
+++ b/app/views/shared/_loginout.html.haml
@@ -1,5 +1,5 @@
 - if logged_in_regular?
-  = link_to "Signed in as #{current_user}", person_path(current_user)
+  = link_to "Hi, #{current_user}", person_path(current_user)
   = profile_image_tag current_user, link: false
 - elsif logged_in_readonly? && !@login_screen
   = link_to('To update People Finder, Sign in now', new_sessions_path )
