link was wrong in nav

--- a/app/views/widgets/_nav.html.haml
+++ b/app/views/widgets/_nav.html.haml
@@ -9,7 +9,7 @@
       %a{:href => home_page_link_helper('/working-at-dit')}
         Working at DIT
     %li
-      %a{:href => home_page_link_helper('/about-dit')}
+      %a{:href => home_page_link_helper('/about-us')}
         About Us
     %li
       %a{:href => home_page_link_helper('/tools')}
