started putting fixes in place for header in IE8

--- a/app/assets/stylesheets/application-ie8.scss
+++ b/app/assets/stylesheets/application-ie8.scss
@@ -10,3 +10,33 @@ $ie-version: 8;
 .form-group.mod-media.card .media-left{
   width: 240px;
 }
+
+html.lte-ie8 {
+	#global-header {
+		&.with-proposition {
+			.header-wrapper {
+				.header-global {
+					float: left;
+					width: 25%;
+				}
+				.mobile-header {
+					display: none;
+				}
+				.header-proposition {
+					clear: none;
+					width: 75%;
+					float: left;
+					#proposition-menu {
+						#proposition-links {
+							li {
+								float: left;
+								margin-right: 20px;
+								width: auto;
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+}
