add a max-height on the image sizes for search results as they should be square

--- a/app/assets/stylesheets/digital-workspace-overrides/application.scss
+++ b/app/assets/stylesheets/digital-workspace-overrides/application.scss
@@ -15,6 +15,7 @@
 // partials
 @import "components/global-header";
 @import "components/people-search-bar";
+@import "components/people-grid";
 @import "components/beta-bar";
 @import "components/search-profile-bar";
 @import "components/flash-messages";
