--- a/app/views/people/_form.html.haml
+++ b/app/views/people/_form.html.haml
@@ -8,21 +8,23 @@
   %h3.heading-medium.with-border-lg
     = "Contact details"
 
-  = f.text_field :primary_phone_number
-  .form-group.visually-connected
-    .panel.panel-border-narrow
-      %label.form-label{for: :primary_phone_country_code} Country code
-      = f.country_select :primary_phone_country_code,
-        {format: :with_dialling_code, priority_countries: ["GB"]},
-        class: 'form-control'
+  #mobile-number-fields
+    = f.text_field :primary_phone_number
+    .form-group.visually-connected
+      .panel.panel-border-narrow
+        %label.form-label{for: :person_primary_phone_country_code} Country code
+        = f.country_select :primary_phone_country_code,
+          {format: :with_dialling_code, priority_countries: ["GB"]},
+          class: 'form-control'
 
-  = f.text_field :secondary_phone_number
-  .form-group.visually-connected
-    .panel.panel-border-narrow
-      %label.form-label{for: :secondary_phone_country_code} Country code
-      = f.country_select :secondary_phone_country_code,
-        {format: :with_dialling_code, priority_countries: ["GB"]},
-        class: 'form-control'
+  #landline-number-fields
+    = f.text_field :secondary_phone_number
+    .form-group.visually-connected
+      .panel.panel-border-narrow
+        %label.form-label{for: :person_secondary_phone_country_code} Country code
+        = f.country_select :secondary_phone_country_code,
+          {format: :with_dialling_code, priority_countries: ["GB"]},
+          class: 'form-control'
 
   = f.text_field :skype_name
 
