Update hard-coded footer link

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -8,7 +8,7 @@
         %a{:href => home_page_link_helper('/networks')}
           Networks
       %li
-        %a{:href => '/teams/overseas'}
+        %a{:href => '/teams/volume-group'}
           Regions
       %li
         %a{:href => home_page_link_helper('/sectors')}
