CT-2520 Add Circle CI 2.0 files, add banner

--- a/app/views/home/show.html.haml
+++ b/app/views/home/show.html.haml
@@ -5,6 +5,8 @@
   .cb-unsupported-browser-warning.error-summary{"aria-labelledby" => "error-summary-heading", :role => "group", :tabindex => "-1"}
     = t('.unsupported_browser_warning_html')
 
+= render partial: 'layouts/survey_banner'
+
 .grid-row
   .column-two-thirds
     %h1.heading-xlarge.cb-page-title
