--- a/app/views/search/_person.html.haml
+++ b/app/views/search/_person.html.haml
@@ -7,6 +7,7 @@
           %div.core-16
             Score:
             = hit._score
+            = hit.name
 
       .media-body
         %h4.media-heading.cb-person-name
