CT-2713 update text on banner

--- a/app/views/layouts/_survey_banner.html.haml
+++ b/app/views/layouts/_survey_banner.html.haml
@@ -7,8 +7,7 @@
         C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" /></svg>
 
         .message_text
-          This service will be down for essential maintenance <em>during the afternoon of Wednesday 13 November</em>.
-          You will not have access after 13.00 on this day – the site will likely resume service after business hours.<br>Apologies for the inconvenience.
+          This service will be down for essential maintenance on Wednesday 19 February. You will not have access after 11.00 on this day – the site will likely resume service after business hours. Apologies for the inconvenience. 
 
 :css
   .message { position: relative; }
