--- a/app/views/layouts/_survey_banner.html.haml
+++ b/app/views/layouts/_survey_banner.html.haml
@@ -7,9 +7,8 @@
         C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" /></svg>
 
         .message_text
-          This service will be down for essential maintenance on Thursday 20 February. The site will likely resume service after business hours, but some users may still be unable to access it for around 24 hours afterwards. Please contact us on <a href="mailto:people-finder-support@digital.justice.gov.uk?subject=Site maintenance (20th Feb) issue">people-finder-support@digital.justice.gov.uk</a> if you continue to experience issues after this time.
-          <br><br>
-          Apologies for the inconvenience 
+          This service will be down for essential maintenance on Thursday 20 February. The site will likely resume service after business hours, but some users may still be unable to access it for around 24 hours afterwards. 
+          <br>Please contact us on <a href="mailto:people-finder-support@digital.justice.gov.uk?subject=Site maintenance (20th Feb) issue">people-finder-support@digital.justice.gov.uk</a> if you continue to experience issues after this time. Apologies for the inconvenience. 
 
 :css
   .message { position: relative; }
