Enable save button on profile picture upload

--- a/app/assets/javascripts/peoplefinder/photo_upload.js.erb
+++ b/app/assets/javascripts/peoplefinder/photo_upload.js.erb
@@ -199,6 +199,7 @@ var PhotoUpload = (function (){
       PhotoUpload.setState(els, 'cropped');
 
       $('.save-cancel-actions input').show();
+      $('.save-cancel-actions input').prop('disabled', false);
     },
 
     cropAgain: function ( event ){
