--- a/app/views/people/show.html.haml
+++ b/app/views/people/show.html.haml
@@ -2,6 +2,8 @@
 
 = render partial: 'breadcrumbs'
 
+= render partial: 'layouts/warning_banner'
+
 = render partial: 'shared/search'
 
 = render partial: 'profile'
