--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -3,7 +3,7 @@
 - content_for :breadcrumbs do
   = breadcrumbs(Home.path + ['Search results'])
 
-= render partial: 'layouts/survey_banner'
+= render partial: 'layouts/warning_banner'
 
 .grid-row
   .column-full
