--- a/app/views/layouts/_warning_banner.html.haml
+++ b/app/views/layouts/_warning_banner.html.haml
@@ -7,7 +7,8 @@
         C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" /></svg>
 
         .message_text
-          This service will be down for essential maintenance on DATE XX MONTH. You will not have access after TIME on this day – the site will likely resume service after business hours. Apologies for the inconvenience. 
+          This service will be down for essential maintenance between 12.30pm and 2pm on Monday 1st February. You will not have access during this period. Please contact <a href="mailto:people-finder-support@digital.justice.gov.uk">people-finder-support@digital.justice.gov.uk</a> if you have any queries. Apologies for the inconvenience.
+
 
 :css
   .message { position: relative; }
