CT-3396 Add warning banner (throwaway code) (#657)
* CT-3396 Add warning banner (throwaway code)

* CT-3396 rename banner file

* CT-3396 Fix typo

* CT-3396 Fix typo error in circleci config

* CT-3396 Update text on banner

* CT-3396 Try and make it slim

* CT-3396 embed hyperlink correctly

* CT-3396 Try using span tag for separating link and text

* CT-3396 try another method to embed link

* CT-3396 Oh it's HAML not slim

--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -3,6 +3,8 @@
 - content_for :breadcrumbs do
   = breadcrumbs(Home.path + ['Search results'])
 
+= render partial: 'layouts/warning_banner'
+
 .grid-row
   .column-full
     %h1.heading-xlarge
