--- a/app/views/layouts/email.text.erb
+++ b/app/views/layouts/email.text.erb
@@ -8,4 +8,4 @@ People Finder
 ------------------------------------------
 If you're unsure an email is from the MOJ:
 
-• forward it to phishing@digital.justice.gov.uk
+• forward it to security@justice.gov.uk
