Update to correct email address

--- a/app/views/layouts/email.html.haml
+++ b/app/views/layouts/email.html.haml
@@ -64,7 +64,7 @@
                     If you're unsure an email is from the MOJ:
                     %br/
                     • forward it to
-                    %a{href: "mailto:phishing@digital.justice.gov.uk", target: "_blank"} phishing@digital.justice.gov.uk
+                    %a{href: "mailto:security@justice.gov.uk", target: "_blank"} security@justice.gov.uk
                   %td{width: "20"}
                 %tr
                   %td{colspan: "3", height: "40", width: "600"}
