Fixed the warning: DEPRECATION WARNING: ActiveModel::Errors#keys is deprecated and will be removed in Rails 6.2.

--- a/app/views/people/_team_selector.html.haml
+++ b/app/views/people/_team_selector.html.haml
@@ -5,7 +5,7 @@
 
 .editable-container
   .editable-summary.parent-summary
-    - if membership.errors.keys.include?(:group)
+    - if membership.errors.attribute_names.include?(:group)
       %span.error-message
         = membership.errors.full_messages_for(:group).first
     - if membership.group
