Add option to form

--- a/app/views/people/_form.html.haml
+++ b/app/views/people/_form.html.haml
@@ -20,6 +20,7 @@
   = f.text_field :secondary_phone_number
   = f.text_field :pager_number
   = f.text_field :secondary_email
+  = f.check_box :swap_email_display
   = f.text_field :location_in_building
   = f.text_field :building
   = f.text_field :city
