--- a/app/views/people/_profile.html.haml
+++ b/app/views/people/_profile.html.haml
@@ -39,19 +39,34 @@
             %dd
               = @person.location
 
-        - if @person.email.present?
-          %dl.inline-labels
-            %dt
-              = t(:email, scope: 'activerecord.attributes.person')
-            %dd
-              = mail_to(@person.email)
+        - if @person.swap_email_display?
+          - if @person.secondary_email.present?
+            %dl.inline-labels
+              %dt
+                = t(:email, scope: 'activerecord.attributes.person')
+              %dd
+                = mail_to(@person.secondary_email)
 
-        - if @person.secondary_email.present?
-          %dl.inline-labels
-            %dt
-              = t(:secondary_email, scope: 'activerecord.attributes.person')
-            %dd
-              = mail_to(@person.secondary_email)
+          - if @person.email.present?
+            %dl.inline-labels
+              %dt
+                = t(:secondary_email, scope: 'activerecord.attributes.person')
+              %dd
+                = mail_to(@person.email)
+        - else
+          - if @person.email.present?
+            %dl.inline-labels
+              %dt
+                = t(:email, scope: 'activerecord.attributes.person')
+              %dd
+                = mail_to(@person.email)
+
+          - if @person.secondary_email.present?
+            %dl.inline-labels
+              %dt
+                = t(:secondary_email, scope: 'activerecord.attributes.person')
+              %dd
+                = mail_to(@person.secondary_email)
 
         - if @person.primary_phone_number.present?
           %dl.inline-labels
