--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -39,16 +39,13 @@
   %noscript
     %iframe{src:"https://www.googletagmanager.com/ns.html?id=GTM-MRLL6W5", height:"0", width:"0", style:"display:none;visibility:hidden"}
 
-- content_for :header_class do
-  = "with-proposition"
-
 - content_for :proposition_header do
   .header-proposition
     .content
       %a.js-header-toggle.menu{:href => "#proposition-links"}
         = "Menu"
       %nav#proposition-menu
-        =link_to app_title, home_path, id: "proposition-name"
+        =link_to "MOJ People Finder", home_path, id: "proposition-name"
         = render "shared/loginout"
 
 - content_for :footer_top do
