--- a/app/assets/stylesheets/email.scss
+++ b/app/assets/stylesheets/email.scss
@@ -54,7 +54,7 @@ td.govuk-logo {
 
 #global-header-bar {
   height: 5px;
-  background-color: #005ea5;
+  background-color: $darkblue;
   width: 560px;
   padding: 0;
   border-spacing: 0;
