--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -45,7 +45,7 @@
       %a.js-header-toggle.menu{:href => "#proposition-links"}
         = "Menu"
       %nav#proposition-menu
-        =link_to "MOJ People Finder", home_path, id: "proposition-name"
+        =link_to "MoJ People Finder", home_path, id: "proposition-name"
         = render "shared/loginout"
 
 - content_for :footer_top do
