--- a/app/views/layouts/govuk_template.html.erb
+++ b/app/views/layouts/govuk_template.html.erb
@@ -55,7 +55,7 @@
       <div class="header-wrapper">
         <div class="govuk-header__container govuk-width-container">
           <div class="govuk-header__logo">
-            <a href="#" class="govuk-header__link govuk-header__link--homepage">
+            <a href="/" class="govuk-header__link govuk-header__link--homepage">
               <svg
                 focusable="false"
                 role="img"
