--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -242,3 +242,20 @@ $border-color: #bfc1c3;
     width: auto;
   }
 }
+
+.govuk-header__service-name{
+  font-size: 24px;
+}
+
+.govuk-header{
+  border-bottom: none;
+}
+
+.govuk-header__container{
+  border-bottom: none;
+}
+
+#global-header .header-wrapper {
+  padding-top: 0;
+  padding-bottom: 0;
+}
