--- a/app/views/people/remove_membership.html.haml
+++ b/app/views/people/remove_membership.html.haml
@@ -2,5 +2,5 @@
 - blank_person.memberships.build
 
 = form_for blank_person, authenticity_token: false do |f|
-  = f.fields_for :memberships, child_index: blank_person.object_id do |membership_f|
+  = f.fields_for :memberships, nil, child_index: blank_person.object_id do |membership_f|
     = render 'membership_fields', org_structure: @org_structure, membership_f: membership_f, person: @person
