Broken test fix.

--- a/app/views/admin/management/show.html.haml
+++ b/app/views/admin/management/show.html.haml
@@ -23,8 +23,8 @@
 
     %ul
       %li#audit-trail
-      = link_to 'Audit trail', audit_trail_path
+        = link_to 'Audit trail', audit_trail_path
       %li#bulk-uploader
         = link_to 'Bulk uploader', new_admin_person_upload_path
       %li#sscl-users
-        = link_to 'SSCL Users', group_path('shared-services-connected-ltd')
+        = link_to 'SSCL Users', group_path("shared-services-connected-ltd")
