Add back help form

--- a/app/views/layouts/govuk_template.html.erb
+++ b/app/views/layouts/govuk_template.html.erb
@@ -88,6 +88,7 @@
 
     <footer class="govuk-footer">
       <div class="govuk-width-container">
+        <%= yield :footer_top %>
         <div class="govuk-footer__meta">
           <div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
             <%= yield :footer_support_links %>
