--- a/app/views/layouts/govuk_template.html.erb
+++ b/app/views/layouts/govuk_template.html.erb
@@ -85,6 +85,14 @@
 
     <div id="global-header-bar"></div>
 
+    <div class="survey-banner">
+      <p>
+        <span>
+          Help us make this service better. Give us your <a href="https://www.smartsurvey.co.uk/s/6PTD3D/">feedback</a>.
+        </span>  
+      </p>
+    </div>
+
     <%= content_for?(:content) ? yield(:content) : yield %>
 
     <footer class="govuk-footer">
