--- a/app/views/errors/internal_error.html.erb
+++ b/app/views/errors/internal_error.html.erb
@@ -2,6 +2,6 @@
   <div class="column-full">
     <h1 class="heading-large">Sorry, there is a problem with the service</h1>
     <p>Try again later.</p>
-    <p>Please contact <a href="mailto:people-finder-support@digital.justice.gov.uk" class="govuk-link">people-finder-support@digital.justice.gov.uk</a> with the details to report this issue.</p>
+    <p>Please contact <a href="mailto:PeopleFinderSupport-gg@justice.gov.uk" class="govuk-link">PeopleFinderSupport-gg@justice.gov.uk</a> with the details to report this issue.</p>
   </div>
 </div>
