--- a/app/views/errors/not_found.html.erb
+++ b/app/views/errors/not_found.html.erb
@@ -3,6 +3,6 @@
     <h1 class="heading-large">Page not found</h1>
     <p>If you typed the web address, check it is correct.</p>
     <p>If you pasted the web address, check you copied the entire address.</p>
-    <p>If the web address is correct or you selected a link or button, please contact <a href="mailto:people-finder-support@digital.justice.gov.uk" class="govuk-link">people-finder-support@digital.justice.gov.uk</a> with the details to report this issue.</p>
+    <p>If the web address is correct or you selected a link or button, please contact <a href="mailto:PeopleFinderSupport-gg@justice.gov.uk" class="govuk-link">PeopleFinderSupport-gg@justice.gov.uk</a> with the details to report this issue.</p>
   </div>
 </div>
